--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
             <div class="container px-4">
                 <a class="navbar-brand" href="#page-top">
-                    <img src="assets/cross.png" alt="Logo" id="logo">
+                    <img src="cross.png" alt="Logo" id="logo">
                 </a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -71,7 +71,7 @@
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2>What is the Gospel?</h2>
-                        <img src="assets/question.jpeg" class="img-fluid" alt="Responsive image">
+                        <img src="question.jpeg" class="img-fluid" alt="Responsive image">
                         <p class="lead">The word gospel comes from the greek work: "euangelion" which means good news. The gospel is the Good news of Jesus Christ and how he died for sinners so that they could be restored back into right relationship with God.</p>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2>Who is Jesus</h2>
-                        <img src="assets/jesus.jpeg" class="img-fluid" alt="Responsive image">
+                        <img src="jesus.jpeg" class="img-fluid" alt="Responsive image">
                         <p class="lead">Jesus Christ, a central figure in Christianity, born around 4 to 6 B.C. in Bethlehem, Judea, is regarded as the faith's founder. His teachings at age 30 focused on love, forgiveness, and the Kingdom of God, often conveyed through parables. His ministry included miracles such as healing the sick. Despite opposition, Jesus was crucified around A.D. 30, a pivotal event symbolizing redemption. Christians believe in his Resurrection three days later, celebrating annually on Easter. Jesus' teachings have profoundly influenced history, shaping Christianity into a major world religion, and his imp act extends beyond religious boundaries, influencing cultures and ethics throughout the centuries.</p>
                     </div>
                 </div>
