--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <div class="row gx-4 justify-content-center">
                     <div class="col-lg-8">
                         <h2>Historical Background</h2>
-                        <img src="assets/map.webp   " class="img-fluid" alt="Responsive image">
+                        <img src="map.webp   " class="img-fluid" alt="Responsive image">
                         <p class="lead">The historical background of the Gospel is set in 1st-century AD Palestine under Roman rule. Second Temple Judaism, with its diverse religious sects, characterized the religious landscape. The cultural milieu blended Jewish traditions, Hellenistic influences, and local customs.
 
                         Amid messianic expectations, Jesus emerged, teaching about love, compassion, and the Kingdom of God. His crucifixion under Roman authority and subsequent resurrection became central to the Gospel narrative. The historical context enriches the understanding of Jesus' life, teachings, and the development of early Christian communities.</p>
