--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p></div>
+            <div class="container px-4"><p class="m-0 text-center text-white">Morgan Burns Copyright 2023</p></div>
         </footer>
 
 
